# w-utils

./: Cargo.toml  LICENSE  README.md  install.sh
.cargo/: config.toml
.copr/: Makefile
.github/workflows/: ci.yml  release.yml
packaging/: README.md  w-utils.spec
script/: install.sh  publish-aur.sh  update-homebrew-tap.sh
src/: cli.rs  copy.rs  lib.rs  main.rs  mvops.rs  options.rs  progress.rs  utils.rs
