[package]
name = "bcp"
version = "0.1.0"
edition = "2021"
description = "Better CP — une version moderne de cp avec barre de progression"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
colored = "2"
walkdir = "2"
humansize = "2"
anyhow = "1"
fs2 = "0.4"
ctrlc = "3"
filetime = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
