[package]
name = "w-utils"
version = "0.1.6"
edition = "2021"
description = "w-utils — modern Unix utilities in Rust (wcp: cp with a progress bar)"
license = "MIT"
repository = "https://github.com/Miro-sh/w-utils"

# La suite w-utils produira plusieurs binaires ; le premier est wcp.
[[bin]]
name = "wcp"
path = "src/main.rs"

# Métadonnées pour les paquets .deb (cargo-deb) et .rpm (cargo-generate-rpm).
# Le binaire musl étant statique, aucune dépendance n'est déclarée.
# Le paquet s'appelle w-utils (la suite) et installe la commande wcp.
[package.metadata.deb]
maintainer = "Miro-sh"
section = "utils"
priority = "optional"
depends = ""
assets = [
    ["target/release/wcp", "usr/bin/", "755"],
    ["wcp.1.gz", "usr/share/man/man1/", "644"],
    ["README.md", "usr/share/doc/w-utils/README", "644"],
]

[package.metadata.generate-rpm]
name = "w-utils"
# cargo-generate-rpm ne réécrit pas les chemins (contrairement à cargo-deb) :
# chemin complet vers le binaire musl produit par .cargo/config.toml.
assets = [
    { source = "target/x86_64-unknown-linux-musl/release/wcp", dest = "/usr/bin/wcp", mode = "755" },
    { source = "wcp.1.gz", dest = "/usr/share/man/man1/wcp.1.gz", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/w-utils/README", mode = "644" },
]

[dependencies]
clap = { version = "4", features = ["derive"] }
indicatif = "0.18"
colored = "3"
walkdir = "2"
humansize = "2"
anyhow = "1"
fs2 = "0.4"
ctrlc = "3"
filetime = "0.2"
clap_mangen = "0.3"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
